# mm

./: .gitignore  .gitmodules  Cargo.toml  README.md
docs/: architecture.md
src/: data.rs  error.rs  main.rs  misc.rs  repo.rs
src/data/: data.rs  defs.rs  mod.rs
src/editor/: editor.rs  external.rs  mod.rs  runner.rs  vim.rs  xi.rs
src/misc/: mod.rs
src/repo/: defs.rs  helpers.rs  mod.rs  repository.rs
