[package]
name = "mm"
version = "0.1.0"
authors = ["Georgy Firsov <gfirsov007@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/GeorgyFirsov/mm"
license-file = "LICENSE"

[dependencies]

# Repository support
git2 = "0.15"
dirs = "4.0.0"

# CLI
clap = "4.0.32"

# xi-based editor
xrl = "0.0.9"
